# ota-allocator

./: Cargo.toml
benchmarks/: mimalloc-benchmark-1-thread.txt
benchmarks/organized/: mimalloc-benchmark-1-thread.txt  mimalloc-benchmark-1-thread.xls
benchmarks/raw/: mimalloc-benchmark-1-thread.txt  mimalloc-benchmark-4-thread.txt  mimalloc-benchmark-8-thread.txt  mimalloc-benchmark-memory.txt
c_glue/: ota_allocator.h  ota_allocator_non_standard.h
src/: c_glue.rs  lib.rs  metadata.rs  mman_wrapper.rs  spinlock_wrapper.rs  utils.rs
src/metadata/: addr_meta.rs  allocator_wrapper.rs  metadata_allocator_wrapper.rs  thread_meta.rs
src/metadata/thread_meta/: addr_meta.rs  bin.rs  large_allocator.rs  pool_allocator.rs  small_alloc.rs  small_allocator.rs
src/metadata/thread_meta/large_allocator/: large_meta.rs
src/metadata/thread_meta/pool_allocator/: pool.rs
src/metadata/thread_meta/small_alloc/: bin.rs  pool_allocator.rs
src/metadata/thread_meta/small_allocator/: bin.rs  pool.rs  pool_allocator.rs  small_meta.rs
src/utils/: addr_tid_ops.rs  align.rs  consts.rs  get_tid.rs  mman_wrapper.rs  rc_alloc.rs
tests/: clasic_allocations.rs  parallel_allocations.rs
tests/commons/: alloc_test_wrapper.rs  allocator_test_wrapper.rs  mod.rs  test_scenarios.rs
tests_c/: Makefile  test.c
tests_c/baby_heap/: Makefile  baby_heap.c  exploit.py
tests_c/ghostparty/: Makefile  exploit.py  ghostparty.cpp
tests_c/integration/: Makefile  test.c
tests_c/multithread/: Makefile  multithread.c
tests_c/uaf_example/: Makefile  uaf.c
