[package]
name = "ota-allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2" , default_features = false }
errno-no-std = "0.0.1"
spin = "0.9.2"
#hashbrown = { version = "0.1.0", features = ["nightly"] }
hashbrown = { version = "0.1.0" }
#buddy_system_allocator = { version = "0.8.0", features = ["use_spin", "const_fn"]}
buddy_system_allocator = { version = "0.8.0", features = ["use_spin"]}
arr_macro = "0.1.3"

[dev-dependencies]
