[package]
name = "ota-allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2" , default_features = false }
errno-no-std = "0.0.1"
spin = { version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex", "rwlock"] }
hashbrown = { version = "0.12.0", features = ["nightly"] }
buddy_system_allocator = { version = "0.8.0", features = ["use_spin", "const_fn"]}
arr_macro = "0.1.3"
libc-print = "0.1.19"
lazy_static = "1.4.0"

[dev-dependencies]
spin = { version = "0.9.2", default-features = false, features = ["mutex", "spin_mutex", "rwlock", "once"] }
